network/nacls-security-groups.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Create an new NACLs and security groups for the VPC

Resources:
  SystemVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.1.0.0/16
      Tags:
        - Key: Name
          Value: SystemVPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: SystemIGW

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref SystemVPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnet1a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SystemVPC
      CidrBlock: 10.1.1.0/24
      AvailabilityZone: "us-east-1a"
      Tags:
        - Key: Name
          Value: public_subnet_1a

  PublicRouteTable1a:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref SystemVPC
      Tags:
        - Key: Name
          Value: public_route_table_1a

  PublicSubnetRouteTableAssociation1a:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1a
      RouteTableId: !Ref PublicRouteTable1a

  PublicInternetRoute1a:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable1a
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  SystemNACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref SystemVPC
      Tags:
        - Key: Name
          Value: SystemNACL

  SystemSubnetNACLAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref SystemNACL
      SubnetId: !Ref PublicSubnet1a

  SystemNACLInboundRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref SystemNACL
      RuleNumber: 100
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 80
        To: 80

  SystemNACLOutboundRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref SystemNACL
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: 0.0.0.0/0

  SystemNACLInboundRuleEphemeral:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref SystemNACL
      RuleNumber: 120
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 1024
        To: 65535

  SystemSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow all internal VPC traffic
      VpcId: !Ref SystemVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: WebServerSecurityGroup

  EC2InstanceRoleSSM:
    Type: AWS::IAM::Role
    Properties:
      RoleName: EC2S3AccessRoleSSM
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore

  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: EC2InstanceRoleSSM

  WebserverEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0532be01f26a3de55
      InstanceType: t2.micro
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: "0"
          GroupSet:
            - !Ref SystemSecurityGroup
          SubnetId: !Ref PublicSubnet1a
      IamInstanceProfile: !Ref EC2InstanceProfile
      Tags:
        - Key: Name
          Value: public_instance_sg
      UserData:
        Fn::Base64: |
          #!/bin/bash
          # Ensures the SSM agent is installed and running
          sudo yum install -y amazon-ssm-agent
          sudo systemctl enable amazon-ssm-agent
          sudo systemctl start amazon-ssm-agent
          sudo yum install -y httpd
          sudo systemctl enable httpd
          sudo systemctl start httpd
          sudo sh -c 'echo "Hello World from $(hostname -f)" > /var/www/html/index.html'
