network/vpc-peering.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Create a VPC peering connection between VPCs

Resources:
  FirstVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: FirstVPC

  SecondVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.10.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: SecondVPC

  PrivateSubnet1a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref FirstVPC
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: "us-east-1a"
      Tags:
        - Key: Name
          Value: private_subnet_1a

  PrivateSubnet1c:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SecondVPC
      CidrBlock: 10.10.0.0/24
      AvailabilityZone: "us-east-1c"
      Tags:
        - Key: Name
          Value: private_subnet_1c

  PrivateRouteTable1a:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref FirstVPC
      Tags:
        - Key: Name
          Value: private_route_table_1a

  PrivateSubnetRouteTableAssociation1a:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1a
      RouteTableId: !Ref PrivateRouteTable1a

  PrivateRouteTable1c:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref SecondVPC
      Tags:
        - Key: Name
          Value: private_route_table_1c

  PrivateSubnetRouteTableAssociation1c:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1c
      RouteTableId: !Ref PrivateRouteTable1c

  VPCPeeringConnection:
    Type: AWS::EC2::VPCPeeringConnection
    Properties:
      PeerVpcId: !Ref SecondVPC
      VpcId: !Ref FirstVPC
      Tags:
        - Key: Name
          Value: FirstVPC-SecondVPC-Peering

  RouteToFirstVPC:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1a
      DestinationCidrBlock: 10.10.0.0/16
      VpcPeeringConnectionId: !Ref VPCPeeringConnection

  RouteToSecondVPC:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1c
      DestinationCidrBlock: 10.0.0.0/16
      VpcPeeringConnectionId: !Ref VPCPeeringConnection

  SystemNACLFirstVPC:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref FirstVPC
      Tags:
        - Key: Name
          Value: SystemNACLFirstVPC

  SystemNACLSecondVPC:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref SecondVPC
      Tags:
        - Key: Name
          Value: SystemNACLSecondVPC

  SystemSubnetNACLAssociation1a:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref SystemNACLFirstVPC
      SubnetId: !Ref PrivateSubnet1a

  SystemSubnetNACLAssociation1c:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      NetworkAclId: !Ref SystemNACLSecondVPC
      SubnetId: !Ref PrivateSubnet1c

  SystemNACLInboundRuleFirstVPC:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref SystemNACLFirstVPC
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0

  SystemNACLInboundRuleSecondVPC:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref SystemNACLSecondVPC
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0

  SystemNACLOutboundRuleFirstVPC:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref SystemNACLFirstVPC
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: 0.0.0.0/0

  SystemNACLOutboundRuleSecondVPC:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref SystemNACLSecondVPC
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: 0.0.0.0/0

  SystemSecurityGroupFirstVPC:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow all internal VPC traffic
      VpcId: !Ref FirstVPC
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 10.0.0.0/16
      Tags:
        - Key: Name
          Value: SG_FirstVPC

  SystemSecurityGroupSecondVPC:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow all internal VPC traffic
      VpcId: !Ref SecondVPC
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 10.10.0.0/16
      Tags:
        - Key: Name
          Value: SG_SecondVPC

  AllowFirstSGToSecondSG:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      GroupId: !GetAtt SystemSecurityGroupSecondVPC.GroupId
      IpProtocol: -1
      SourceSecurityGroupId: !GetAtt SystemSecurityGroupFirstVPC.GroupId

  AllowSecondSGToFirstSG:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      GroupId: !GetAtt SystemSecurityGroupFirstVPC.GroupId
      IpProtocol: -1
      SourceSecurityGroupId: !GetAtt SystemSecurityGroupSecondVPC.GroupId

  SSMEndpointFirstVPC:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcId: !Ref FirstVPC
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ssm
      VpcEndpointType: Interface
      SubnetIds:
        - !Ref PrivateSubnet1a
      SecurityGroupIds:
        - !Ref SystemSecurityGroupFirstVPC
      PrivateDnsEnabled: true

  SSMMessagesEndpointFirstVPC:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcId: !Ref FirstVPC
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ssmmessages
      VpcEndpointType: Interface
      SubnetIds:
        - !Ref PrivateSubnet1a
      SecurityGroupIds:
        - !Ref SystemSecurityGroupFirstVPC
      PrivateDnsEnabled: true

  EC2MessagesEndpointFirstVPC:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcId: !Ref FirstVPC
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ec2messages
      VpcEndpointType: Interface
      SubnetIds:
        - !Ref PrivateSubnet1a
      SecurityGroupIds:
        - !Ref SystemSecurityGroupFirstVPC
      PrivateDnsEnabled: true

  SSMEndpointSecondVPC:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcId: !Ref SecondVPC
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ssm
      VpcEndpointType: Interface
      SubnetIds:
        - !Ref PrivateSubnet1c
      SecurityGroupIds:
        - !Ref SystemSecurityGroupSecondVPC
      PrivateDnsEnabled: true

  SSMMessagesEndpointSecondVPC:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcId: !Ref SecondVPC
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ssmmessages
      VpcEndpointType: Interface
      SubnetIds:
        - !Ref PrivateSubnet1c
      SecurityGroupIds:
        - !Ref SystemSecurityGroupSecondVPC
      PrivateDnsEnabled: true

  EC2MessagesEndpointSecondVPC:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcId: !Ref SecondVPC
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ec2messages
      VpcEndpointType: Interface
      SubnetIds:
        - !Ref PrivateSubnet1c
      SecurityGroupIds:
        - !Ref SystemSecurityGroupSecondVPC
      PrivateDnsEnabled: true

  EC2InstanceRoleSSM:
    Type: AWS::IAM::Role
    Properties:
      RoleName: EC2S3AccessRoleSSM
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore

  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: EC2InstanceRoleSSM

  WebserverEC2InstanceFirstVPC:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0532be01f26a3de55
      InstanceType: t2.micro
      SubnetId: !Ref PrivateSubnet1a
      SecurityGroupIds:
        - !Ref SystemSecurityGroupFirstVPC
      IamInstanceProfile: !Ref EC2InstanceProfile
      Tags:
        - Key: Name
          Value: private_instance_first_vpc
      UserData:
        Fn::Base64: |
          #!/bin/bash
          # Ensures the SSM agent is installed and running
          sudo yum install -y amazon-ssm-agent
          sudo systemctl enable amazon-ssm-agent
          sudo systemctl start amazon-ssm-agent

  WebserverEC2InstanceSecondVPC:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0532be01f26a3de55
      InstanceType: t2.micro
      SubnetId: !Ref PrivateSubnet1c
      SecurityGroupIds:
        - !Ref SystemSecurityGroupSecondVPC
      IamInstanceProfile: !Ref EC2InstanceProfile
      Tags:
        - Key: Name
          Value: private_instance_second_vpc
      UserData:
        Fn::Base64: |
          #!/bin/bash
          # Ensures the SSM agent is installed and running
          sudo yum install -y amazon-ssm-agent
          sudo systemctl enable amazon-ssm-agent
          sudo systemctl start amazon-ssm-agent
